--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -597,6 +597,7 @@ a {
 
 /* Search block */
 #search-block-form {
+  margin-top:20px;
   input[type="submit"] {
     background: none;
     position: absolute;
