--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -159,6 +159,7 @@
   margin-right: 10%; }
 
 .branding-data, #search-block-form {
-  width: auto; }
+  width: 100%;
+  float: none; }
 
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
