--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -613,11 +613,11 @@ a {
   }
 }
 
-.branding-data, #search-block-form {
+.branding-data {
   width:50%;
   float:left;
 }
 
 #search-block-form {
-  float:none;
+  width:50%;
 }
