--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -612,6 +612,7 @@ a {
   float: left; }
 
 #search-block-form {
-  width: 50%; }
+  width: 50%;
+  float: left; }
 
 /*# sourceMappingURL=global.css.map */
