--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -613,6 +613,7 @@ a {
 
 #search-block-form {
   width: 50%;
-  float: left; }
+  float: left;
+  position: relative; }
 
 /*# sourceMappingURL=global.css.map */
