--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -198,8 +198,13 @@
   }
 }
 
-.branding-data, #search-block-form {
+.branding-data {
   width:100%;
+  float:none;
+}
+
+#search-block-form {
+  width:60%;
   float:none;
 }
 
