--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -158,8 +158,12 @@
   float: right;
   margin-right: 10%; }
 
-.branding-data, #search-block-form {
+.branding-data {
   width: 100%;
+  float: none; }
+
+#search-block-form {
+  width: 60%;
   float: none; }
 
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
