--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -166,4 +166,8 @@
   width: 60%;
   float: none; }
 
+/* news */
+.view-display-id-page_1 .views-row {
+  margin-bottom: 20px; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
