--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -576,6 +576,9 @@ a {
     .context-filmrecruitzz .view-id-filmrecruitz .views-row img {
       float: none; }
 
+.bean-filmrecruitz-button .field-items {
+  float: left; }
+
 /* Webform */
 .webform-component--persoonsgegevens, .webform-component--over-mij {
   float: left;
