--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -576,7 +576,7 @@ a {
     .context-filmrecruitzz .view-id-filmrecruitz .views-row img {
       float: none; }
 
-.bean-filmrecruitz-button .field-items {
+.bean-filmrecruitz-button .field-items .field-item {
   float: left; }
 
 /* Webform */
