--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -571,9 +571,11 @@ a {
 }
 
 .bean-filmrecruitz-button {
+  margin-top:50px;
   .field-items {
     .field-item {
       float:left;
+      margin-right:20px;
     }
   }
 }
