--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -635,4 +635,19 @@ a {
   position:relative;
 }
 
+.views-field-field-naam {
+  display:none;
+}
+
+.views-field-field-profielfoto {
+
+}
+
+.field-content.image-main {
+  background-color:blue;
+  display:inline-block;
+}
+
+
+
 
