--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -623,4 +623,11 @@ a {
   float: left;
   position: relative; }
 
+.views-field-field-naam {
+  display: none; }
+
+.field-content.image-main {
+  background-color: blue;
+  display: inline-block; }
+
 /*# sourceMappingURL=global.css.map */
