--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -625,5 +625,8 @@ a {
 
 .view-id-cast_crew .views-field-field-naam {
   display: none; }
+.view-id-cast_crew .field-content.image-main {
+  background-color: blue;
+  display: inline-block; }
 
 /*# sourceMappingURL=global.css.map */
