--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -638,14 +638,34 @@ a {
 .view-id-cast_crew {
   .views-field-field-naam {
     display:none;
+    position: absolute;
+    top: 20px;
+    left: 10px;
+    color: #333;
+    font-size: 24px;
+    text-shadow: #ddd 0px 0px 6px;
+    z-index: 1;
   }
 
   .views-field-field-profielfoto {
+    margin-top: -271px;
   }
 
   .field-content.image-main {
     background-color:blue;
     display:inline-block;
+  }
+
+  .views-field-title{
+    position: relative;
+    display: inline-block;
+    height: 271px;
+    width: 100%;
+    z-index: 5;
+
+    span{
+      display: none;
+    }
   }
 
 }
