--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -635,7 +635,7 @@ a {
 .view-id-cast_crew .views-field-field-profielfoto {
   margin-top: -271px; }
 .view-id-cast_crew .field-content.image-main {
-  background-color: blue;
+  background-color: #3989c9;
   display: inline-block; }
 .view-id-cast_crew .views-field-title {
   position: relative;
