--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -652,7 +652,7 @@ a {
   }
 
   .field-content.image-main {
-    background-color:blue;
+    background-color:#3989c9;
     display:inline-block;
   }
 
