--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -626,12 +626,12 @@ a {
 .view-id-cast_crew .views-field-field-naam {
   display: none;
   position: absolute;
-  top: 20px;
-  left: 10px;
-  color: #333;
+  top: 85px;
+  left: 141px;
+  color: #fff;
   font-size: 24px;
-  text-shadow: #ddd 0px 0px 6px;
-  z-index: 1; }
+  z-index: 1;
+  border-bottom: 1px solid; }
 .view-id-cast_crew .views-field-field-profielfoto {
   margin-top: -271px; }
 .view-id-cast_crew .field-content.image-main {
