--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -636,6 +636,10 @@ a {
 }
 
 .view-id-cast_crew {
+  .views-row {
+    width:33.3%;
+    float:left;
+  }
   .views-field-field-naam {
     display: none;
     position: absolute;
