--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -644,10 +644,9 @@ a {
   .views-field-field-naam {
     display: none;
     position: absolute;
-    width:100%;
-    text-align:center;
     top: 85px;
-    left: 0px;
+    left: 0;
+    text-align:center;
     color: #fff;
     font-size: 24px;
     z-index: 1;
