--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -645,7 +645,7 @@ a {
     display: none;
     position: absolute;
     top: 85px;
-    left: 0;
+    left: 20px;
     text-align:center;
     color: #fff;
     font-size: 24px;
