--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -631,7 +631,7 @@ a {
   display: none;
   position: absolute;
   top: 85px;
-  left: 20;
+  left: 20px;
   text-align: center;
   color: #fff;
   font-size: 24px;
