--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -675,6 +675,22 @@ a {
   }
 }
 
+.views-widget-filter-field_catogorie_cast_crew_tid {
+  label[for=edit-field-catogorie-cast-crew-tid] {
+    background-color: #000;
+    border-radius: 3px;
+    color: #fff;
+    text-align: center;
+    padding: 3px;
+    float:left;
+  }
+  .form-item-field-catogorie-cast-crew-tid {
+    .form-item {
+      float:left;
+    }
+  }
+}
+
 
 
 
