--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -676,6 +676,7 @@ a {
 }
 
 .views-widget-filter-field_catogorie_cast_crew_tid {
+  width:100%;
   label[for=edit-field-catogorie-cast-crew-tid] {
     background-color: #000;
     border-radius: 3px;
