--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -661,12 +661,13 @@ a {
     padding: 3px;
     float: left; }
   .views-widget-filter-field_catogorie_cast_crew_tid .form-item-field-catogorie-cast-crew-tid .form-item {
-    float: left;
     background-color: gray;
     border-radius: 3px;
     color: #fff;
     text-align: center;
-    padding: 3px;
+    padding: 3px 20px;
+    float: left;
+    margin: 0 10px;
     float: left; }
   .views-widget-filter-field_catogorie_cast_crew_tid .form-item-field-catogorie-cast-crew-tid .form-item.highlight {
     float: left;
@@ -674,7 +675,7 @@ a {
     border-radius: 3px;
     color: #fff;
     text-align: center;
-    padding: 3px;
+    padding: 3px 20px;
     float: left; }
   .views-widget-filter-field_catogorie_cast_crew_tid .form-item-field-catogorie-cast-crew-tid input[type="checkbox"] {
     display: none; }
