--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -687,12 +687,13 @@ a {
   }
   .form-item-field-catogorie-cast-crew-tid {
     .form-item {
-      float:left;
       background-color: gray;
       border-radius: 3px;
       color: #fff;
       text-align: center;
-      padding: 3px;
+      padding: 3px 20px;
+      float: left;
+      margin: 0 10px;
       float:left;
     }
     .form-item.highlight {
@@ -701,7 +702,7 @@ a {
       border-radius: 3px;
       color: #fff;
       text-align: center;
-      padding: 3px;
+      padding: 3px 20px;
       float:left;
     }
     input[type="checkbox"] {
