--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -704,6 +704,7 @@ a {
       text-align: center;
       padding: 3px 20px;
       float:left;
+      margin:0 10px;
     }
     input[type="checkbox"] {
       display:none;
