--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -309,9 +309,7 @@ a {
     padding-bottom: 0; }
   .block-superfish-2 ul li {
     margin: 0;
-    width: 100%;
-    margin-left: 0px;
-    border-bottom: 1px dashed #ddd; }
+    margin-left: 0px; }
     .block-superfish-2 ul li a {
       font-size: 1em;
       padding: 8px 0;
