--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -314,9 +314,9 @@ a {
       font-size: 1em;
       padding: 8px 0;
       font-weight: 400;
-      color: #000; }
+      color: #3989c9; }
     .block-superfish-2 ul li a.active {
-      color: #f78b1f; }
+      color: #3989c9; }
 
 /* Home */
 .front .view-header {
