--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -165,10 +165,10 @@ a {
           font-size:1em;
           padding:8px 0;
           font-weight:400;
-          color:#000;
+          color:$blue;
         }
         a.active {
-          color:$orange;
+          color:$blue;
         }
       }
     }
