--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -311,12 +311,18 @@ a {
     margin: 0;
     margin-left: 0px; }
     .block-superfish-2 ul li a {
-      font-size: 1em;
-      padding: 8px 0;
-      font-weight: 400;
-      color: #3989c9; }
+      font-size: 18px;
+      padding: 0px 11px;
+      font-weight: 700;
+      color: #3989c9;
+      text-transform: uppercase;
+      border-right: 1px solid #3989c9; }
     .block-superfish-2 ul li a.active {
       color: #3989c9; }
+  .block-superfish-2 ul li.first a {
+    padding-left: 0; }
+  .block-superfish-2 ul li.last a {
+    border-right: none; }
 
 /* Home */
 .front .view-header {
