--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -723,6 +723,17 @@ a {
   }
 }
 
+.node-crew-cast {
+  .field-name-field-naam {
+    .field-name-field-ervaring {
+       color:$blue;
+    }
+    .field-name-field-over-mij {
+      color:$blue;
+    }
+  }
+}
+
 
 
 
