--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -744,6 +744,14 @@ a {
       font-weight:100;
     }
   }
+  .field-name-field-foto-s {
+    width:50%;
+    float:left;
+    img {
+      width:100%;
+      float:left;
+    }
+  }
 }
 
 
