--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -700,5 +700,11 @@ a {
   .node-crew-cast .field-name-field-over-mij .field-label {
     font-size: 16px;
     font-weight: 100; }
+.node-crew-cast .field-name-field-foto-s {
+  width: 50%;
+  float: left; }
+  .node-crew-cast .field-name-field-foto-s img {
+    width: 100%;
+    float: left; }
 
 /*# sourceMappingURL=global.css.map */
