--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -702,6 +702,9 @@ a {
     font-weight: 100; }
 .node-crew-cast .field-name-field-foto-s img {
   width: 50%;
-  float: left; }
+  float: left;
+  box-sizing: border-box;
+  padding-right: 31px;
+  padding-bottom: 31px; }
 
 /*# sourceMappingURL=global.css.map */
