--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -748,6 +748,9 @@ a {
     img {
       width:50%;
       float:left;
+      box-sizing: border-box;
+      padding-right: 31px;
+      padding-bottom: 31px;
     }
   }
 }
