--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -707,4 +707,7 @@ a {
   padding-right: 31px;
   padding-bottom: 31px; }
 
+.context-filmrecruitzz .block-superfish-2 {
+  display: none; }
+
 /*# sourceMappingURL=global.css.map */
