--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -710,4 +710,7 @@ a {
 .context-filmrecruitzz .block-superfish-2 {
   display: none; }
 
+.block-superfish-2 {
+  width: 100%; }
+
 /*# sourceMappingURL=global.css.map */
