--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -765,6 +765,31 @@ a {
   width: 100%;
 }
 
+.block-views-exp-cast-crew-page {
+  width:58%;
+  float:left;
+}
+
+.page-filmrecruitz-cast {
+  .block-webform {
+    .field-name-title {
+      a {
+        background-color: $orange;
+        border-radius: 3px;
+        color: #fff;
+        text-align: center;
+        padding: 3px 20px;
+        float: left;
+        margin: 0 10px;
+        float: left;
+        font-size: 16px;
+        margin-top: 7px;
+        width: 3%;
+      }
+    }
+  }
+
+}
 
 
 
