--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -770,7 +770,7 @@ a {
   float:left;
 }
 
-.page-filmrecruitz-cast {
+.page-filmrecruitz-cast, .page-filmrecruitz-crew {
   .block-webform {
     .field-name-title {
       a {
