--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -713,7 +713,7 @@ a {
 .block-superfish-2 {
   width: 100%; }
 
-.block-views-exp-cast-crew-page {
+.block-views-exp-cast-crew-page, .block-views-exp-cast-crew-page-1 {
   width: 58%;
   float: left; }
 
