--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -765,7 +765,7 @@ a {
   width: 100%;
 }
 
-.block-views-exp-cast-crew-page {
+.block-views-exp-cast-crew-page, .block-views-exp-cast-crew-page-1 {
   width:58%;
   float:left;
 }
