--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -599,8 +599,13 @@ a {
     float: left; }
 
 .context-filmrecruitz input[type="submit"] {
-  float: none;
-  margin-right: 10%; }
+  float: right;
+  margin-right: 10%;
+  background-color: orange;
+  padding: 9px 11px;
+  border-radius: 0;
+  color: #fff;
+  font-weight: 100; }
 
 /* Search block */
 #search-block-form {
