--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -598,7 +598,7 @@ a {
     width: 11%;
     float: left; }
 
-.context-filmrecruitz input[type="submit"] {
+.context-filmrecruitz input[type="submit"], .context-crew input[type="submit"] {
   float: right;
   margin-right: 10%;
   background-color: orange;
