--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -608,7 +608,7 @@ a {
   }
 }
 
-.context-filmrecruitz {
+.context-filmrecruitz, .context-crew {
   input[type="submit"] {
     float: right;
     margin-right: 10%;
