--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -608,7 +608,7 @@ a {
   }
 }
 
-
+.context-filmrecruitz, .context-crew, .context-cast {
   input[type="submit"] {
     float: right;
     margin-right: 10%;
@@ -618,7 +618,19 @@ a {
     color: #fff;
     font-weight: 100;
   }
+}
 
+.context-contact {
+  input[type="submit"] {
+    float: right;
+    margin-right: 10%;
+    background-color: orange;
+    padding: 9px 11px;
+    border-radius: 0;
+    color: #fff;
+    font-weight: 100;
+  }
+}
 
 /* Search block */
 #search-block-form {
