--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -54,7 +54,8 @@
   padding-left: 10%;
   text-shadow: 1px 1px 1px #050505;
   font-weight: 700;
-  line-height: 1.1; }
+  line-height: 1.1;
+  text-transform: uppercase; }
 
 .block-news-frontpage-block {
   display: inline-block;
