--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -194,6 +194,7 @@ a {
     font-size: 18px;
     font-weight: 600;
     color: $orange;
+    text-transform:uppercase;
   }
   .zone-content-wrapper {
     background-color: #161515;
