--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -209,6 +209,7 @@ a {
         h2 {
           font-size: 18px;
           color: #fff;
+          text-transform:uppercase;
         }
         .field-name-body {
           font-size: 14px;
