--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -353,7 +353,7 @@ a {
 /* Footer */
 #block-bean-logo-0, #block-bean-socialmedia {
   img {
-    float:left;
+    float:right;
   }
 }
 
@@ -361,6 +361,10 @@ a {
   margin-top:20px;
   img {
     padding-right:1%;
+  }
+  .field-name-field-link-image {
+    float:right;
+    width:100%;
   }
 }
 
@@ -808,8 +812,9 @@ a {
       }
     }
   }
-
 }
+
+
 
 
 
