--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -751,4 +751,27 @@ a {
     font-size: 16px;
     margin-top: -11px; }
 
+/* Footer superfish */
+.block-superfish-3 {
+  float: left;
+  color: #000;
+  width: 100%;
+  margin: 0;
+  padding-bottom: 10px; }
+  .block-superfish-3 h2.block-title {
+    margin-bottom: 10px;
+    text-transform: none;
+    float: left;
+    width: 100%;
+    margin-left: 10px; }
+  .block-superfish-3 ul li {
+    margin: 0;
+    width: 100%;
+    margin-left: 10px; }
+    .block-superfish-3 ul li a {
+      color: #000;
+      font-size: 0.938em;
+      padding: 4px 0;
+      font-weight: 400; }
+
 /*# sourceMappingURL=global.css.map */
