--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -815,4 +815,14 @@ a {
   }
 }
 
-/* Footer superfish */
+/* jury */
+
+.field-name-field-jury {
+  .field-items {
+    .field-item {
+      width:33.3%;
+      float:left;
+      text-align:center;
+    }
+  }
+}
