--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -823,6 +823,9 @@ a {
       width:33.3%;
       float:left;
       text-align:center;
+      .field-item {
+        width:100%;
+      }
     }
   }
 }
