--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -823,9 +823,26 @@ a {
       width:33.3%;
       float:left;
       text-align:center;
+      box-sizing:border-box;
+      padding:0 2px;
       .field-item {
         width:100%;
       }
     }
+  }
+}
+
+.paragraphs-item-jury {
+  .field-name-field-naam {
+    font-size: 26px;
+    font-weight: 700;
+  }
+  .field-name-field-functie {
+    font-weight: 700;
+    font-size: 18px;
+    color: orange;
+  }
+  .field-name-field-tekst {
+    padding:0 15px;
   }
 }
