--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -767,8 +767,34 @@ a {
 .paragraphs-item-jury .field-name-field-functie {
   font-weight: 700;
   font-size: 18px;
-  color: orange; }
+  color: #f78b1f; }
 .paragraphs-item-jury .field-name-field-tekst {
   padding: 0 15px; }
+
+.paragraphs-item-links-titels-rechts-quote {
+  margin-bottom: 50px; }
+  .paragraphs-item-links-titels-rechts-quote .field-name-field-titel {
+    color: #f78b1f;
+    text-align: center;
+    font-size: 46px;
+    margin-bottom: 0;
+    margin-top: 0; }
+  .paragraphs-item-links-titels-rechts-quote .field-name-field-subtitel {
+    text-transform: uppercase;
+    font-weight: 700;
+    text-align: center;
+    font-size: 28px; }
+  .paragraphs-item-links-titels-rechts-quote .field-name-field-quote {
+    font-style: italic;
+    font-size: 15px;
+    text-align: center; }
+    .paragraphs-item-links-titels-rechts-quote .field-name-field-quote .field-item {
+      width: 40%;
+      margin: 0 auto;
+      margin-top: 20px; }
+
+.paragraphs-item-1-kolom-tekst-33-3-breed {
+  width: 33.3%;
+  float: left; }
 
 /*# sourceMappingURL=global.css.map */
