--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -795,6 +795,9 @@ a {
 
 .paragraphs-item-1-kolom-tekst-33-3-breed {
   width: 33.3%;
-  float: left; }
+  float: left;
+  box-sizing: border-box;
+  padding-right: 30px;
+  word-break: break-all; }
 
 /*# sourceMappingURL=global.css.map */
