--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -797,7 +797,7 @@ a {
   width: 33.3%;
   float: left;
   box-sizing: border-box;
-  padding-right: 30px;
+  padding-right: 6%;
   word-break: break-all; }
 
 /*# sourceMappingURL=global.css.map */
