--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -878,6 +878,6 @@ a {
   width: 33.3%;
   float: left;
   box-sizing: border-box;
-  padding-right: 30px;
+  padding-right: 6%;
   word-break: break-all;
 }
