--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -1,3 +1,13 @@
 /* This file will hold styles that are loaded using the same media query as the wide grid. */
+.block-news-frontpage-block .views-row {
+  margin-bottom: 8px;
+  width: 50%;
+  padding: 15px; }
+  .block-news-frontpage-block .views-row .views-field-title a {
+    font-size: 18px; }
+.block-news-frontpage-block .views-field-view-node a {
+  width: 54px;
+  height: 57px;
+  background-size: 54px; }
 
 /*# sourceMappingURL=default-alpha-default-wide.css.map */
