--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -889,6 +889,11 @@ a {
       a {
         color:#fff;
       }
+      ul {
+        li {
+          float:none;
+        }
+      }
     }
   }
 }
