--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -889,6 +889,8 @@ a {
       width:25%;
       margin:0;
       padding:0;
+      text-decoration:none;
+      list-style:none;
       a {
         color:#fff;
       }
