--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -811,7 +811,8 @@ a {
     color: #fff;
     font-size: 18px; }
   .region-footer-first .block-menu li ul li {
-    float: none; }
+    float: none;
+    width: 1%; }
     .region-footer-first .block-menu li ul li a {
       font-size: 14px;
       font-weight: 100; }
