--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -898,6 +898,7 @@ a {
       ul {
         li {
           float:none;
+          width:100%;
           a {
             font-size: 14px;
             font-weight: 100;
