--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -807,9 +807,9 @@ a {
   padding: 0;
   text-decoration: none;
   list-style: none;
-  min-height: 183 a;
-    min-height-color: #fff;
-    min-height-font-size: 16px; }
+  height: 18 a;
+    height-color: #fff;
+    height-font-size: 16px; }
   .region-footer-first .block-menu li ul li {
     float: none;
     width: 100%; }
