--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -891,7 +891,7 @@ a {
       padding:0;
       text-decoration:none;
       list-style:none;
-
+      height:183px;
       a {
         color:#fff;
         font-size:16px;
