--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -901,6 +901,7 @@ a {
         li {
           float:none;
           width:100%;
+          height:auto;
           a {
             font-size: 12px;
             font-weight: 100;
