--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -914,3 +914,15 @@ a {
     }
   }
 }
+
+.block-bean-mail {
+  float:left;
+  width:30%;
+  img {
+    float:left;
+  }
+}
+
+.block-search {
+  width:70%;
+}
