--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -540,6 +540,9 @@ a {
 }
 
 .context-filmrecruitzz {
+  #zone-content-wrapper {
+    background-color:$blue;
+  }
   #zone-branding-wrapper {
     padding:10px 0 20px 0;
     background-color:#3989c9;
