--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -553,6 +553,8 @@ a {
 .context-filmrecruitz .zone-footer-wrapper {
   background-color: #3989c9; }
 
+.context-filmrecruitzz #zone-content-wrapper {
+  background-color: #3989c9; }
 .context-filmrecruitzz #zone-branding-wrapper {
   padding: 10px 0 20px 0;
   background-color: #3989c9; }
