--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -927,3 +927,14 @@ a {
     width:87%;
   }
 }
+
+.field-name-field-content {
+  .field-item {
+    width: 33.3%;
+    float: left;
+    color: #fff;
+    .field-item {
+      width:100%;
+    }
+  }
+}
